需要修改所有prompt的调用方式，不要再使用systemprompt了，保持和python侧对齐